--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <input type="text" id="usr_inp" placeholder="Enter pokemon name"></input>
-    <button id="btn" onclick="fetching_img()">Finde pokemon</button>
+    <button id="btn" onclick="fetching_img()">Find pokemon</button>
     <br>
     <img id="img" src="" alt="Couldn't find your pokemon🥺">
     <div id="stats"></div>
